Fix-horizontal-vs-vertical-svg-and-update-lecture1

--- a/week04/lecture1.html
+++ b/week04/lecture1.html
@@ -621,7 +621,7 @@
 <p style="color:#1e293b;font-size:15px;line-height:1.6;">When your system needs to handle more traffic, you have two fundamental options: scale up (vertical) or scale out (horizontal).</p>
 
 <div style="text-align:center;margin:20px 0;">
-  <img style="max-width:100%;height:auto;border:1px solid #cbd5e1;border-radius:8px;" src="http://ncfdatascience.com/week04/horizontal_vs_vertical.svg" alt="Horizontal vs Vertical Scaling comparison showing vertical scaling upgrading one server from 2 cores to 8 cores versus horizontal scaling adding multiple servers behind a load balancer" />
+  <img style="max-width:100%;height:auto;border:1px solid #cbd5e1;border-radius:8px;" src="horizontal_vs_vertical.svg" alt="Horizontal vs Vertical Scaling comparison showing vertical scaling upgrading one server from 2 cores to 8 cores versus horizontal scaling adding multiple servers behind a load balancer" />
   <p style="color:#64748b;font-size:13px;margin-top:10px;">Vertical Scaling (Scale Up): Upgrade one server | Horizontal Scaling (Scale Out): Add more servers with load balancer</p>
 </div>
 
@@ -705,7 +705,7 @@
 <p style="color:#1e293b;font-size:15px;line-height:1.6;">When you scale horizontally, you need to think about how all the pieces fit together. Here's the typical architecture pattern for distributed systems:</p>
 
 <div style="text-align:center;margin:20px 0;">
-  <img style="max-width:100%;height:auto;border:1px solid #cbd5e1;border-radius:8px;" src="http://ncfdatascience.com/week04/distributed_architecture.svg" alt="Architecture of distributed compute showing client, request router (load balancer), worker pool (Lambda, EC2, containers), and shared state store (database) with key design questions about availability, worker provisioning, and consistency models" />
+  <img style="max-width:100%;height:auto;border:1px solid #cbd5e1;border-radius:8px;" src="distributed_architecture.svg" alt="Architecture of distributed compute showing client, request router (load balancer), worker pool (Lambda, EC2, containers), and shared state store (database) with key design questions about availability, worker provisioning, and consistency models" />
   <p style="color:#64748b;font-size:13px;margin-top:10px;">Distributed Architecture: Client → Request Router → Worker Pool → Shared State Store</p>
 </div>
 
