Update lab content and ignore rules

--- a/DistributedForDS2026/weeks/week04/lab_1.html
+++ b/DistributedForDS2026/weeks/week04/lab_1.html
@@ -136,7 +136,7 @@ aws_secret_access_key = Y+Co...............</pre>
 
     <div style="text-align:center;margin:30px 0;">
         <a href="https://colab.research.google.com/github/gsaluncf/publicfiles/blob/main/DistributedForDS2026/weeks/week04/dynamodb_hands_on.ipynb"
-            style="display:inline-block;background-color:#3b82f6;color:#ffffff;padding:12px 30px;border-radius:8px;text-decoration:none;font-size:16px;font-weight:bold;">Open
+            style="display:inline-block;background-color:#3b82f6;color:#ffffff;padding:12px 30px;border-radius:8px;text-decoration:none;font-size:16px;font-weight:bold;" target="_blank">Open
             in Google Colab</a>
     </div>
 
