--- a/DistributedForDS2026/weeks/week04/lab_2.html
+++ b/DistributedForDS2026/weeks/week04/lab_2.html
@@ -54,7 +54,7 @@
 
     <div style="text-align:center;margin:30px 0;">
         <a href="https://colab.research.google.com/github/gsaluncf/publicfiles/blob/main/DistributedForDS2026/weeks/week04/sqs_hands_on.ipynb"
-            style="display:inline-block;background-color:#3b82f6;color:#ffffff;padding:12px 30px;border-radius:8px;text-decoration:none;font-size:16px;font-weight:bold;">Open
+            style="display:inline-block;background-color:#3b82f6;color:#ffffff;padding:12px 30px;border-radius:8px;text-decoration:none;font-size:16px;font-weight:bold;" target="_blank">Open
             in Google Colab</a>
     </div>
 
