--- a/distributedforcs2026/week4/p2p-00-recap.html
+++ b/distributedforcs2026/week4/p2p-00-recap.html
@@ -157,6 +157,16 @@
         </ul>
     </div>
 
+    <hr style="border: 1px solid #cbd5e1; margin: 30px 0;">
+
+    <div style="display: flex; justify-content: space-between; margin: 20px 0; padding: 10px 0;">
+        <a href="https://ncfdatascience.com/distributedforcs2026/week4/p2p-project.html"
+            style="color: #64748b; text-decoration: none; font-size: 14px;">Back to Project Overview</a>
+        <a href="https://ncfdatascience.com/distributedforcs2026/week4/p2p-01-breaks.html"
+            style="color: #1e40af; text-decoration: none; font-size: 14px; font-weight: bold;">Next: Where Pub/Sub
+            Breaks for 2032</a>
+    </div>
+
 </body>
 
 </html>
