--- a/distributedforcs2026/week4/p2p-01-breaks.html
+++ b/distributedforcs2026/week4/p2p-01-breaks.html
@@ -166,6 +166,16 @@
         </ul>
     </div>
 
+    <hr style="border: 1px solid #cbd5e1; margin: 30px 0;">
+
+    <div style="display: flex; justify-content: space-between; margin: 20px 0; padding: 10px 0;">
+        <a href="https://ncfdatascience.com/distributedforcs2026/week4/p2p-00-recap.html"
+            style="color: #64748b; text-decoration: none; font-size: 14px;">Previous: What Pub/Sub Gave Us</a>
+        <a href="https://ncfdatascience.com/distributedforcs2026/week4/p2p-02-node.html"
+            style="color: #1e40af; text-decoration: none; font-size: 14px; font-weight: bold;">Next: What a P2P Node
+            Needs to Be</a>
+    </div>
+
 </body>
 
 </html>
