--- a/distributedforcs2026/week4/p2p-02-node.html
+++ b/distributedforcs2026/week4/p2p-02-node.html
@@ -193,6 +193,16 @@
         </ul>
     </div>
 
+    <hr style="border: 1px solid #cbd5e1; margin: 30px 0;">
+
+    <div style="display: flex; justify-content: space-between; margin: 20px 0; padding: 10px 0;">
+        <a href="https://ncfdatascience.com/distributedforcs2026/week4/p2p-01-breaks.html"
+            style="color: #64748b; text-decoration: none; font-size: 14px;">Previous: Where Pub/Sub Breaks</a>
+        <a href="https://ncfdatascience.com/distributedforcs2026/week4/p2p-03-protocol.html"
+            style="color: #1e40af; text-decoration: none; font-size: 14px; font-weight: bold;">Next: P2P Message
+            Protocol Reference</a>
+    </div>
+
 </body>
 
 </html>
