--- a/distributedforcs2026/week4/p2p-project.html
+++ b/distributedforcs2026/week4/p2p-project.html
@@ -146,7 +146,7 @@
 
     <p style="margin: 15px 0;">
         <a href="https://colab.research.google.com/github/gsaluncf/publicfiles/blob/main/distributedforcs2026/week4/p2p_protocol_lab.ipynb"
-            style="display: inline-block; background-color: #1e40af; color: #ffffff; padding: 10px 20px; border-radius: 6px; text-decoration: none; font-size: 14px; font-weight: bold;">Open
+            style="display: inline-block; background-color: #1e40af; color: #ffffff; padding: 10px 20px; border-radius: 6px; text-decoration: none; font-size: 14px; font-weight: bold;" target="_blank">Open
             Protocol Lab in Colab</a>
         <span style="color: #64748b; font-size: 13px; margin-left: 10px;"></span>
     </p>
@@ -160,7 +160,7 @@
 
     <p style="margin: 15px 0;">
         <a href="https://colab.research.google.com/github/gsaluncf/publicfiles/blob/main/distributedforcs2026/week4/p2p_algorithm_labs.ipynb"
-            style="display: inline-block; background-color: #1e40af; color: #ffffff; padding: 10px 20px; border-radius: 6px; text-decoration: none; font-size: 14px; font-weight: bold;">Open
+            style="display: inline-block; background-color: #1e40af; color: #ffffff; padding: 10px 20px; border-radius: 6px; text-decoration: none; font-size: 14px; font-weight: bold;"  target="_blank">Open
             Algorithm Labs in Colab</a>
         <span style="color: #64748b; font-size: 13px; margin-left: 10px;"> </span>
     </p>
