--- a/DistributedForDS2026/weeks/week04/lab_2.html
+++ b/DistributedForDS2026/weeks/week04/lab_2.html
@@ -125,6 +125,7 @@
             </tr>
         </thead>
         <tbody>
+
             <tr>
                 <td style="padding:12px;border:1px solid #cbd5e1;color:#1e293b;"><strong>AWS credentials in
                         Colab</strong></td>
@@ -235,7 +236,8 @@ aws_secret_access_key = Y+Co...............</pre>
             style="flex:1;min-width:250px;background-color:#eff6ff;border:2px solid #3b82f6;border-radius:12px;padding:20px;text-align:center;">
             <h3 style="color:#1e40af;margin-top:5px;">🛒 Customer Notebook</h3>
             <p style="color:#64748b;font-size:14px;margin:10px 0;">Place orders and wait for your pizza</p>
-            <a href="https://colab.research.google.com/github/gsaluncf/publicfiles/blob/main/distributedfords/week04/sqs_customer.ipynb"
+            <a href="https://colab.research.google.com/github/gsaluncf/publicfiles/blob/main/DistributedForDS2026/weeks/week04/sqs_customer.ipynb"
+                target="_blank"
                 style="display:inline-block;background-color:#3b82f6;color:#ffffff;padding:10px 24px;border-radius:8px;text-decoration:none;font-size:14px;font-weight:bold;margin-top:10px;">Open
                 Customer Notebook</a>
         </div>
@@ -243,7 +245,8 @@ aws_secret_access_key = Y+Co...............</pre>
             style="flex:1;min-width:250px;background-color:#d1fae5;border:2px solid #10b981;border-radius:12px;padding:20px;text-align:center;">
             <h3 style="color:#065f46;margin-top:5px;">👨‍🍳 Cook Notebook</h3>
             <p style="color:#64748b;font-size:14px;margin:10px 0;">Pull orders and cook pizzas</p>
-            <a href="https://colab.research.google.com/github/gsaluncf/publicfiles/blob/main/distributedfords/week04/sqs_cook.ipynb"
+            <a href="https://colab.research.google.com/github/gsaluncf/publicfiles/blob/main/DistributedForDS2026/weeks/week04/sqs_cook.ipynb"
+                target="_blank"
                 style="display:inline-block;background-color:#10b981;color:#ffffff;padding:10px 24px;border-radius:8px;text-decoration:none;font-size:14px;font-weight:bold;margin-top:10px;">Open
                 Cook Notebook</a>
         </div>
