--- a/DistributedForDS2026/weeks/week04/lab_2.html
+++ b/DistributedForDS2026/weeks/week04/lab_2.html
@@ -142,7 +142,7 @@
             <tr>
                 <td style="padding:12px;border:1px solid #cbd5e1;color:#1e293b;"><strong>Your role assignment</strong>
                 </td>
-                <td style="padding:12px;border:1px solid #cbd5e1;color:#1e293b;">Your instructor will tell you whether
+                <td style="padding:12px;border:1px solid #cbd5e1;color:#1e293b;">I'll tell  will tell you whether
                     you are a <strong>Customer</strong> or a <strong>Cook</strong>.</td>
             </tr>
         </tbody>
@@ -392,10 +392,8 @@ aws_secret_access_key = Y+Co...............</pre>
             <li>If you created any test queues during solo experimentation, delete those with the cleanup cell.</li>
         </ul>
     </div>
+<!--
 
-    <!-- ========================================== -->
-    <!-- INSTRUCTOR SETUP (HIDDEN IN PRODUCTION) -->
-    <!-- ========================================== -->
     <hr style="border:1px solid #cbd5e1;margin:30px 0;">
 
     <div style="background-color:#fef2f2;border:2px solid #ef4444;border-radius:8px;padding:20px;margin:20px 0;">
@@ -432,6 +430,7 @@ sqs.delete_queue(QueueUrl=RESPONSE_QUEUE_URL)
 print("Both queues deleted.")</pre>
         </div>
     </div>
+-->
 
 </body>
 
